# cwic

./: .gitignore  LICENSE  README.md  pixi.toml  pyproject.toml  requirements.txt  runconfig.ini
cwic/: chat_with_it.py  test_cwic.py  train.py
cwic/configs/: default.yaml
cwic/cwic_scripts/: convert_checkpoint.py
cwic/models/: __init__.py  configuration_cwic.py  convert.py  modelling_cwic.py  modules.py  outputs.py
cwic/references/: configuration_llama.py  modelling_llama.py
cwic/utils/: __init__.py  data_utils.py  loss_utils.py  torch_utils.py
cwic_huggingface/: __init__.py  configuration_cwic.py  modelling_cwic.py  modules_cwic.py
cwic_scripts/: chat_with_it.py  convert_checkpoint.py  train_cwic.py
cwic_triton/: __init__.py  triton_torch.py
huggingface/: chat_with_it.py  convert_checkpoint.py
huggingface/cwic/: __init__.py  modelling_cwic.py  modules_cwic.py
model_code/: CWICMod.py  config.py  logical_axis.py  loss_names.py  model_helpers.py  nnx_model.py  optimizers.py  utils.py
scripts/: train_cwic.py
